# LED_Cube_Controller

./: .gitignore  CMakeLists.txt  LICENSE  README.md  idf_env.bat  sdkconfig.defaults
components/LED-manager/: CMakeLists.txt  LED-encoder.c  LED-encoder.h  LED-manager.c  LED-manager.h  test.c  test.h
components/bq25731/: CMakeLists.txt  bq25731.c  bq25731.h  bq25731_registers.h
components/icm42688p/: CMakeLists.txt  icm42688p.c  icm42688p.h  icm42688p_registers.h
components/led-modes/: CMakeLists.txt  led_modes.c  led_modes.h  mode_bst.c  mode_bst.h  mode_imu_test.c  mode_imu_test.h
components/max17049/: CMakeLists.txt  max17049.c  max17049.h
components/mcp9701a/: CMakeLists.txt  mcp9701a.c  mcp9701a.h
components/tmp102/: CMakeLists.txt  tmp102.c  tmp102.h
components/wifi-manager/: CMakeLists.txt  Kconfig.projbuild  wifi-manager.c  wifi-manager.h
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  peripherals.h  status_server.c  status_server.h
